# vibe-o-matic

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md
ai-gm/: .editorconfig  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  (+1 more)
oracle-cli/: .gitignore  README.md  pyproject.toml
oracle-cli/.claude/: settings.local.json
oracle-cli/.claude/skills/playing-ose-solo/: REFERENCE.md  SKILL.md  WORKFLOW.md
oracle-cli/docs/: COMMAND_REFERENCE.md  DESIGN.md
oracle-cli/oracle/: README.md  __init__.py  __main__.py  cli.py
oracle-cli/oracle/core/: __init__.py  chaos.py  closed.py  muse.py  roll.py  twist.py
oracle-cli/oracle/tables/: __init__.py  closed.yaml  muse.yaml  twist.yaml
oracle-cli/oracle/util/: __init__.py  dice.py  formats.py  rng.py
oracle-cli/tests/: __init__.py  conftest.py  test_chaos.py  test_cli.py  test_closed.py  test_core_roll.py  test_dice_parser.py  test_muse.py  test_rng.py  test_twist.py
textual-tui/: CLAUDE.md  README.md  pyproject.toml
textual-tui/tests/: __init__.py  test_app.py  test_orchestrator.py  test_ui.py
textual-tui/tests/fixtures/: __init__.py  claude  codex
textual-tui/textual_tui/: __init__.py  app.py
textual-tui/textual_tui/orchestrator/: __init__.py  engine.py  events.py  gh_service.py  git_service.py  persistence.py  subprocess_runner.py
textual-tui/textual_tui/orchestrator/agents/: __init__.py  base.py  claude_driver.py  codex_driver.py  schemas.py  validation.py
textual-tui/textual_tui/ui/: __init__.py  screens.py  widgets.py
(+40 files in other folders)
