[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textual-tui"
version = "0.1.0"
description = "Textual TUI for vibe-o-matic"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.85.0",
    "anthropic>=0.40.0",
]

[project.scripts]
vibe-tui = "textual_tui.app:main"

[project.optional-dependencies]
dev = [
    "textual-dev>=1.0.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["textual_tui"]
